Fixed missing space in admin toolbar
In the case there is only one Options button in the toolbar

--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -318,7 +318,7 @@ body .navbar-fixed-top{
 	margin-bottom: 5px;
 	.btn-wrapper {
 		display: inline-block;
-		margin: 0 0 5px 5px;
+		margin: 0 0 10px 5px;
 	}
 }
 .subhead-fixed{
